<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#13c8d8"
    tools:context=".QuizActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:orientation="vertical"
        android:padding="10dip" >

        <TextView
            android:id="@+id/textSurvey"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:gravity="center"
            android:text="@string/surveytitle"
            android:textColor="#eef3f3"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textQuestion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:gravity="center"
            android:text="@string/defquestion"
            android:textColor="#eef3f3"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textRequired"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5sp"
            android:layout_marginTop="5sp"
            android:text="@string/required"
            android:textColor="#ff0000"
            android:textSize="20sp" />

        <!-- Will hold checkboxes if needed -->

        <LinearLayout
            android:id="@+id/viewLL"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textColor="#eef3f3"
            android:textSize="20sp" >
        </LinearLayout>
        <!-- Will hold radio buttons -->

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:textColor="#eef3f3"
            android:textSize="20sp" >
        </RadioGroup>
        <!-- other field and open question -->

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="22sp"
                android:layout_marginTop="5sp"
                android:text="@string/other"
                android:textColor="#eef3f3"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextOpenOther"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:layout_toRightOf="@id/textOther"
                android:inputType="text"
                android:textColor="#4c4c4c"
                android:textSize="20sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/nextQuestion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dip"
            android:text="@string/nextquestion"
            android:textColor="#4c4c4c" />
    </LinearLayout>

</RelativeLayout>