<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#13c8d8"
   tools:context=".ResultActivity" >
 <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:orientation="vertical"
        android:padding="10dip" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:gravity="center"
            android:text="@string/thankyou"
            android:textColor="#eef3f3"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sendetomail"
            android:textColor="#eef3f3"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnSendEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dip"
            android:text="@string/send" 
            android:textColor="#eef3f3"/>
        <!-- Link to RSS Activity -->

    </LinearLayout>
</RelativeLayout>